--- a/src/Card.css
+++ b/src/Card.css
@@ -3,6 +3,7 @@
   
   .card:hover {
     transform: scale(1.05);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.3);
   }
   
   .card-image {
@@ -53,8 +54,12 @@
   width: 300px; /* Fixed width for the cards */
   height: auto; /* Allow height to adjust automatically */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #36c76e;
+  background: hsla(182, 95%, 48%, 0.932);
+  
   text-align: center; /* Centers the content inside the card */
+
+  
+  
 }
 
 .card-image {
